--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4",
-    "ngCordova": "~0.1.24-alpha"
+    "ngCordova": "~0.1.24-alpha",
+    "angular-img-fallback":"dcohenb/angular-img-fallback#0.1.3"
   }
 }
