--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,13 @@
 {
-  "name": "HelloIonic",
+  "name": "Product",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.2.4",
     "ngCordova": "~0.1.24-alpha",
-    "angular-img-fallback":"dcohenb/angular-img-fallback#0.1.3"
+    "angular-img-fallback":"dcohenb/angular-img-fallback#0.1.3",
+    "angular-sanitize":"angular-sanitize#1.4.3",
+    "angular#1.4.3":"angular#1.4.3",
+    "angular-animate":"angular-animate#1.4.3",
+    "angular-ui-router":"angular-ui-router#0.2.13"
   }
 }
