--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app",
+  "name": "product",
   "version": "1.1.1",
-  "description": "app: An Ionic project",
+  "description": "Products",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
@@ -23,5 +23,7 @@
     "ionic-plugin-keyboard",
     "cordova-plugin-x-socialsharing"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+
+  ]
 }
